apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: apps
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9696
  type: ClusterIP
